# advent-of-code

./: .gitignore  Cargo.toml  build.zig  build.zig.zon  deny.toml  flake.nix
.github/workflows/: ci.yml
puzzles/: day02.md  day03.md  day04.md  day05.md  day07.md  day09.md
puzzles/2023/: day08.md  day10.md  day12.md  day13.md  day14.md  day15.md
src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  main.rs  main.zig
src/aoc2023/: day01.rs  day04.rs  day05.rs  day06.rs  day08.rs  day09.rs  day10.rs  day12.rs  day13.rs  day14.rs
src/aoc2024/: day01.zig  day02.zig  day03.zig  day04.zig  day05.zig  day06.zig  day07.zig  day08.zig  day09.zig  day10.zig  root.zig
