[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
handlebars = "4.5.0"
regex = "1.10.2"
serde_json = "1.0.108"
