[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.17.1"
clap = { version = "4.4.10", features = ["derive"] }
handlebars = "4.5.0"
html-escape = "0.2.13"
itertools = "0.12.0"
lazy_static = "1.4.0"
num = "0.4.1"
rayon = "1.8.0"
regex = "1.10.2"
serde = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["rt"] }
